--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
+    - name: Vet Code
+      run: make vet
+
     - name: Build
       run: make build
 
     - name: Test
       run: make test
-
-    - name: Benchmarks
-      run: make bench
