--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
-        os: [macos-10.15, ubuntu-20.04, windows-2019]
-        go: ["1.16", "1.17"]
+        os: [macos-10.15, macos-11, ubuntu-20.04, windows-2019, windows-2022]
+        go: ["1.16", "1.17", "1.18"]
 
     steps:
 
